--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "mongoose": "^8.5.2",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.14",
-    "nodemon": "^3.1.4",
     "path": "^0.12.7",
     "socket.io": "^4.7.5"
   },
@@ -23,14 +22,20 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "build":"npm install --prefix ./client && npm run build --prefix ./client && npm install"
+  "start": "node index.js",
+  "build": "npm install --prefix ./client && npm run build --prefix ./client && npm install",
+  "dev": "concurrently \"npm run start\" \"npm run client\"",
+  "client": "npm start --prefix ./client"
   },
   "engines": {
     "node": "v20.x"
   },
   "author": "",
   "license": "ISC",
-  "devDependencies": {},
+  "devDependencies": {
+    "concurrently": "^8.2.2",
+    "eslint": "^9.9.0",
+    "nodemon": "^3.1.4"
+  },
   "description": ""
 }
