--- a/package.json
+++ b/package.json
@@ -10,22 +10,25 @@
     "express-rate-limit": "^7.4.0",
     "express-validator": "^7.2.0",
     "helmet": "^7.1.0",
+    "hpp": "^0.2.3",
     "init": "^0.1.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.2",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.14",
     "path": "^0.12.7",
-    "socket.io": "^4.7.5"
+    "socket.io": "^4.7.5",
+    "xss": "^1.0.15",
+    "xss-clean": "^0.1.4"
   },
   "name": "server",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-  "start": "node index.js",
-  "build": "npm install --prefix ./client && npm run build --prefix ./client && npm install",
-  "dev": "concurrently \"npm run start\" \"npm run client\"",
-  "client": "npm start --prefix ./client"
+    "start": "node index.js",
+    "build": "npm install --prefix ./client && npm run build --prefix ./client && npm install",
+    "dev": "concurrently \"npm run start\" \"npm run client\"",
+    "client": "npm start --prefix ./client"
   },
   "engines": {
     "node": "v20.x"
